--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.2.0",
     "react-native": "0.53.0",
     "react-native-animated-linear-gradient": "^1.1.2",
+    "react-native-iphone-x-helper": "^1.0.2",
     "react-native-linear-gradient": "^2.4.0"
   },
   "devDependencies": {
