--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ coremltools==0.8
 jupyter==1.0.0
 Keras==2.1.3
 tensorflow==1.7.0
+tensorflow-gpu==1.7.0
 tensorflowjs==0.4.2
 joblib==0.12.0
 pandas==0.23.1
 nltk==3.3.0
-sklearn==0.19.1
 tables==3.4.4
+sklearn
